# ud-compatibility

./: Language-specific notes from the UD→UM conversion.md  README.md  pyproject.toml
UD_UM/: .paths.py.swp  UD-UniMorph.tsv  languages.py  marry.py  paths.py  translator.py  um_reader.py  utils.py
ud-compatibility/: paths.py  um_reader.py
ud_compatibility/: languages.py  marry.py  paths.py  translator.py  um_reader.py  utils.py
